# safe-pattern-generation

./: .gitignore  README.md
haskell_patterns/: rhiger_full.hs  rhiger_simple.hs  untyped_sum.hs
list_unrolling/: Makefile  gen_merlin.sh  list_unrolling.opam
list_unrolling/bench/: benchmark.ml  dune
list_unrolling/lib/generators/: dune  fcp_generators.ml
list_unrolling/lib/implementations/: dune  hand_unrolled.ml  standard.ml  unrolled_list.ml
list_unrolling/lib/utilities/: dune  pat.ml  pat_playground.ml
list_unrolling/lib/utilities/fun_rebind/: dune
list_unrolling/lib/utilities/pat_playground/: pat_playground.ml
list_unrolling/lib/utilities/patterns/: common.ml  common.mli  dune  fcpatterns.ml  pat.ml  pat.mli  unsafe.ml  unsafe.mli
list_unrolling/test/: dune  test_loop_unrolling.ml
list_unrolling/test/benchmark/: benchmark.ml
pattern_generation/: dune-project  gen_merlin.sh  pattern_generation.opam
pattern_generation/bench/: assorted_maps.ml  dune  unrolling.ml
pattern_generation/lib/generators/: generators.ml  report_examples.ml
pattern_generation/lib/implementations/: hand_unrolled.ml  unrolled_ds.ml
pattern_generation/lib/utilities/fun_rebind/: fun_rebind.ml  fun_rebind.mli
pattern_generation/lib/utilities/pat_playground/: dune
pattern_generation/lib/utilities/patterns/: common.ml
pattern_generation/test/: dune
playground/cache_line_benchmark/: Makefile  cacheline.c
playground/map_testing/: Makefile  map.hs  map.ml
playground/metaocaml_testing/playground/: Makefile  playground.ml
playground/metaocaml_testing/power-examples/: Makefile  alt_power_rts.ml  power.ml  power_rts.ml  powerf_rts.ml  square.ml
playground/metaocaml_testing/unrolling/: Makefile  unrolling.ml
power_example/: dune  dune-project  power.ml
