(lang dune 3.14)

(name pattern_generation)

(generate_opam_files true)

(source
 (github ethanrange/safe-pattern-generation))

(authors "Ethan Range")

(maintainers "Ethan Range")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name pattern_generation)
 (synopsis "Safe pattern generation for multi-stage programming")
 (description "A library on top of MetaOCaml, allowing for the type-safe generation of pattern matching expressions containing statically-unknown patterns")
 (depends ocaml dune dynlink metaocaml core_unix core_bench)
 (tags
  ("multi-stage programming", "patterns", "metaprogramming", "MetaOCaml")))

