(library
 (name generators)
 (libraries dynlink metaocaml)
 (modules generators))

(library
 (name fcp_generators)
 (libraries dynlink metaocaml fcpatterns)
 (modules fcp_generators))

(executable
 (name report_examples)
 (libraries dynlink metaocaml fcp_generators fcpatterns)
 (modules report_examples))

; (env
;   (dev
;     (flags (:standard -warn-error -A))))